--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 		<span class="say">人海中常有良友相伴，长乐未央</span><br>
 		<span class="say">所求皆如愿，所行化坦途</span><br>
 		<span class="say">多喜乐，长安宁</span><br>
-		<span class="say"></span><br>
 		<span class="say">愿你历尽千帆，笑颜如初</span><br>
 		<span class="say">愿你走过半生，归来仍少年</span><br>
         <span class="say"> </span><br>
@@ -51,8 +50,16 @@
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
+	<h2><b>终于送到啦~顺丰电子设备还不让发加急，我还得改代码（如果你扫那个二维码的话）</b></h2>
+	<h2><b>读万卷书，行万里路，这个应该是可以放万卷书的吧哈哈哈~</b></h2>
+	<h2><b>说实话，认识你真是一件非常开心的事情</b></h2>
+	<h2><b>善良、漂亮、勤奋</b></h2>
+	<h2><b>真是一个超级棒姑娘啊</b></h2>
+	<h2><b>新的一岁加油啊！</b></h2>
+
   </div>
 </div>
+
 <script>
     </script>
 <script>
